<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/baseline_image_24"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_information"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_information" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/title_account" />

</menu>