<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:background="@color/background"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dermacheck.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.dermacheck.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_historyFragment_to_lesionDetailFragment"
            app:destination="@id/lesionDetailFragment"
            app:popUpTo="@id/navigation_history"
            app:popUpToInclusive="true"
            />

    </fragment>

    <fragment
        android:id="@+id/lesionDetailFragment"
        android:name="com.example.dermacheck.ui.history.LesionDetailFragment"
        tools:layout="@layout/fragment_lesion_detail" >
        <argument
            android:name="lesionJson"
            app:argType="string"
            android:defaultValue="" />
        <action
            android:id="@+id/action_lesionDetailFragment_to_navigation_information2"
            app:destination="@id/navigation_information"
            app:popUpTo="@id/navigation_history"
            app:popUpToInclusive="true"
            />
    </fragment>

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.dermacheck.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_information"
        android:name="com.example.dermacheck.ui.information.InformationFragment"
        android:label="@string/title_information"
        tools:layout="@layout/fragment_information" >
        <action
            android:id="@+id/action_navigation_information_to_navigation_skin_condition"
            app:destination="@id/navigation_skin_condition"
            app:popUpTo="@id/navigation_information"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_skin_condition"
        android:name="com.example.dermacheck.ui.information.SkinConditionDetailsFragment"
        android:label="Skin Condition Details"
        tools:layout="@layout/fragment_skin_disease_details" >
        <argument
            android:name="itemJson"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.dermacheck.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" >
        <action
            android:id="@+id/action_navigation_account_to_navigation_update_profile"
            app:destination="@id/navigation_update_profile"
            app:popUpTo="@id/navigation_account"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_navigation_account_to_navigation_reset_password"
            app:destination="@id/navigation_reset_password"
            app:popUpTo="@id/navigation_account"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_update_profile"
        android:name="com.example.dermacheck.ui.account.UpdateProfileFragment"
        android:label="Update Profile"
        tools:layout="@layout/fragment_update_profile" >
        <action
            android:id="@+id/action_navigation_update_profile_to_navigation_account"
            app:destination="@id/navigation_account" />
    </fragment>

    <fragment
        android:id="@+id/navigation_reset_password"
        android:name="com.example.dermacheck.ui.account.ResetPasswordFragment"
        android:label="Reset Password"
        tools:layout="@layout/fragment_reset_password" >
        <action
            android:id="@+id/action_navigation_reset_password_to_navigation_account"
            app:destination="@id/navigation_account" />
    </fragment>

</navigation>